--- a/src/scss/variables/_layout.scss
+++ b/src/scss/variables/_layout.scss
@@ -19,4 +19,5 @@ $header-height-desktop: 400px;
 /**
  * Footer
  */
-$footer-height: 40px;
+$footer-height-mobile: 140px;
+$footer-height-mini-tablet: 40px;
